--- a/package.json
+++ b/package.json
@@ -17,6 +17,19 @@
   },
   "homepage": "https://github.com/zohdy/travel-site-test#readme",
   "dependencies": {
-    "jquery": "^3.3.1"
+    "browser-sync": "^2.24.5",
+    "jquery": "^3.3.1",
+    "normalize.css": "^8.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^8.6.4",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-watch": "^5.0.0",
+    "postcss-import": "^11.1.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0"
   }
 }
