--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^5.0.0",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
