--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.6.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
@@ -30,9 +33,11 @@
     "gulp-sass": "^4.0.1",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "^5.0.0",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0"
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "^4.16.0"
   }
 }
