--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "browser-sync": "^2.24.5",
     "jquery": "^3.3.1",
+    "jquery-smooth-scroll": "^2.2.0",
     "normalize.css": "^8.0.0",
     "waypoints": "^4.0.1"
   },
