--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-sync": "^2.24.5",
     "jquery": "^3.3.1",
     "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^4.0.4",
     "normalize.css": "^8.0.0",
     "waypoints": "^4.0.1"
   },
