--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.0.4",
     "normalize.css": "^8.0.0",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
@@ -31,10 +32,12 @@
     "babel-preset-es2015": "^6.24.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^3.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "gulp-svg-sprite": "^1.4.0",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^5.0.0",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
